fix(job): preserve nullable workflow task inputs